# s3rm-rs

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  deny.toml
.claude/: config.json  settings.local.json
.claude/agent-memory/professional-marketer/: MEMORY.md
.claude/agent-memory/rust-implementation-verifier/: MEMORY.md
.claude/agent-memory/software-maintainer/: MEMORY.md
.claude/agent-memory/technical-writer/: MEMORY.md
.claude/agent-memory/test-architect/: MEMORY.md
.claude/agents/: professional-marketer.md  rust-implementation-verifier.md  software-maintainer.md  technical-writer.md  test-architect.md
.claude/commands/: check-and-push.md  check-commit-push.md  smart-commit.md  update-specs.md
.claude/hooks/: spec-context-reminder.json  spec-context-reminder.sh  task-completion-check.json  task-completion-check.sh
.claude/skills/: rust-testing-patterns.md  s3rm-rs-spec-workflow.md
.claude/skills/implement/: SKILL.md
.claude/skills/rust-expert/: SKILL.md
.claude/skills/rust-expert/references/: PERF_BUILD_GUIDE.md  PLAYBOOK_RUST_REVIEW_DEBUG.md  PLAYBOOK_UNSAFE_FFI_ASYNC.md  PROMPT_TEMPLATES.md
.claude/skills/rust-testing-patterns/: SKILL.md
.claude/skills/s3rm-rs-spec-workflow/: SKILL.md
.claude/skills/task/: SKILL.md
.claude/skills/test-coverage/: SKILL.md
.claude/skills/test-coverage/references/: coverage-criteria.md  evaluation-rubric.md  measurement-and-reporting.md  mutation-testing.md  risk-based-testing.md  sample-dialogs.md  self-test-cases.md  techniques.md  workflow.md
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  custom.md  feature_request.md
.github/workflows/: cd.yml  ci.yml
.kiro/specs/s3rm-rs/: .claude-project  CLAUDE_CODE_OPTIMIZATION.md  CLAUDE_CODE_SETUP.md  CLAUDE_QUICK_START.md  INTEGRATION_SUMMARY.md  README.md  REBUILD_GUIDE.md  TASK_EXECUTION_GUIDE.md  design.md  setup-claude-code.sh  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
docs/: design.md  e2e_test_cases.md  product.md  requirements.md  structure.md  tech.md
examples/: event.lua  filter.lua  library_usage.rs
proptest-regressions/: aws_config_properties.txt  cicd_properties.txt  logging_properties.txt  rate_limiting_properties.txt
specs/: design.md  requirements.md  tasks.md
src/: additional_properties.rs  aws_config_properties.rs  cicd_properties.rs  cross_platform_properties.rs  lib.rs  lib_properties.rs  lister.rs  logging_properties.rs  optimistic_locking_properties.rs  pipeline.rs  rate_limiting_properties.rs  retry_properties.rs  stage.rs  terminator.rs  test_utils.rs  versioning_properties.rs
src/callback/: event_callback_properties.rs  event_manager.rs  filter_manager.rs  mod.rs  user_defined_event_callback.rs  user_defined_filter_callback.rs
src/config/: mod.rs
src/config/args/: mod.rs  tests.rs
src/config/args/value_parser/: file_exist.rs  human_bytes.rs  mod.rs  regex.rs  url.rs
src/deleter/: batch.rs  mod.rs  single.rs  tests.rs
src/filters/: delete_marker_only.rs  exclude_regex.rs  filter_properties.rs  include_regex.rs  keep_latest_only.rs  larger_size.rs  mod.rs  mtime_after.rs  mtime_before.rs  smaller_size.rs  user_defined.rs
src/lua/: engine.rs  event.rs  filter.rs  lua_properties.rs  mod.rs
src/property_tests/: access_key_masking_properties.rs  additional_properties.rs  cicd_properties.rs  event_callback_properties.rs  filter_properties.rs  keep_latest_only_properties.rs  lib_properties.rs  logging_properties.rs  lua_properties.rs  mod.rs  optimistic_locking_properties.rs  rate_limiting_properties.rs  retry_properties.rs  safety_properties.rs  stress_tests.rs  versioning_properties.rs
src/safety/: mod.rs  safety_properties.rs
src/storage/: mod.rs
src/storage/s3/: client_builder.rs  mod.rs
src/types/: error.rs  event_callback.rs  filter_callback.rs  mod.rs  token.rs
steering/: structure.md
steering/init_build/: README.md  e2e_test_plan.md  tasks.md
steering/v1.0.1/: README.md  tasks.md
steering/v1.0.2/: README.md  tasks.md
steering/v1.1.0/: README.md  tasks.md
steering/v1.1.1/: README.md  tasks.md
test_data/test_config/: config
test_data/test_config_creds_in_config/: config  credentials
tests/: README.md  cli_exit_codes.rs  e2e_aws_config.rs  e2e_callback.rs  e2e_combined.rs  e2e_delete_marker_only.rs  e2e_deletion.rs  e2e_error.rs  e2e_express_one_zone.rs  e2e_filter.rs  e2e_keep_latest_only.rs  e2e_listing.rs  e2e_optimistic.rs  e2e_performance.rs  e2e_retry.rs  e2e_safety.rs  e2e_stats.rs  e2e_stress.rs  e2e_tracing.rs  e2e_versioning.rs
tests/common/: mod.rs
