[package]
name = "s3rm-rs"
version = "0.1.0"
edition = "2024"
authors = ["nidor1998 <nidor1998@gmail.com>"]
description = "Extremely fast Amazon S3 object deletion tool."
license = "Apache-2.0"
rust-version = "1.91.0"
repository = "https://github.com/nidor1998/s3rm-rs"
homepage = "https://github.com/nidor1998/s3rm-rs"
readme = "README.md"
keywords = ["AWS", "Amazon", "S3", "delete"]
categories = ["command-line-utilities", "asynchronous", "concurrency"]

[dependencies]
# Error handling (same as s3sync)
anyhow = "1.0.101"
thiserror = "2.0.18"

# Async runtime (same as s3sync)
async-trait = "0.1.89"
async-channel = "2.5.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"

# AWS SDK (same versions as s3sync)
aws-config = { version = "1.8.13", features = ["behavior-version-latest"] }
aws-runtime = "1.6.0"
aws-sdk-s3 = "1.122.0"
aws-smithy-runtime-api = "1.11.3"
aws-smithy-types = "1.4.3"
aws-smithy-types-convert = { version = "0.60.12", features = ["convert-chrono"] }
aws-types = "1.3.11"

# CLI (same as s3sync)
clap = { version = "4.5.57", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.5.65"
clap-verbosity-flag = "3.0.4"

# Date/time
chrono = "0.4.43"

# Utilities (same as s3sync)
dyn-clone = "1.0.20"
futures = "0.3.31"
futures-util = "0.3.31"
url = "2.5.8"
urlencoding = "2.1.3"

# Rate limiter (same as s3sync)
leaky-bucket = "1.1.2"

# Regex (same as s3sync)
fancy-regex = "0.17.0"
regex = "1.12.3"

# Security (same as s3sync)
zeroize = "1.8.2"
zeroize_derive = "1.4.3"

# Logging (same as s3sync)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "local-time"] }

# Progress bar (same as s3sync)
indicatif = "0.18.3"
simple_moving_average = "1.0.2"

# Terminal

# Serialization (same as s3sync)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lua support (same as s3sync, optional)
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "vendored"], optional = true }

# Misc (same as s3sync)
cfg-if = "1.0.4"
bitflags = "2.10.0"
log = "0.4.29"
rusty-fork = "0.3.1"

[dev-dependencies]
proptest = "1.6"
tokio-test = "0.4"
once_cell = "1.21.3"
uuid = { version = "1.20.0", features = ["v4"] }
nix = { version = "0.31.1", features = ["process", "signal"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(e2e_test)'] }

[features]
default = ["lua_support"]
lua_support = ["dep:mlua"]

[profile.release]
debug = 1
panic = "unwind"
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[profile.release-min-size]
inherits = "release"
debug = 0
panic = "abort"
opt-level = "z"
