[package]
name = "s3rm-rs"
version = "1.3.0"
edition = "2024"
authors = ["nidor1998 <nidor1998@gmail.com>"]
description = "Fast Amazon S3 object deletion tool."
license = "Apache-2.0"
rust-version = "1.91.1"
repository = "https://github.com/nidor1998/s3rm-rs"
homepage = "https://github.com/nidor1998/s3rm-rs"
documentation = "https://docs.rs/s3rm-rs"
readme = "README.md"
keywords = ["AWS", "Amazon", "S3", "delete"]
categories = ["command-line-utilities", "asynchronous", "concurrency"]
include = [
    "src/**/*",
    "tests/**/*",
    "examples/**/*",
    "test_data/**/*",
    "proptest-regressions/**/*",
    "build.rs",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CONTRIBUTING.md",
    "SECURITY.md",
]

[dependencies]
# Error handling (same as s3sync)
anyhow = "1.0.102"
thiserror = "2.0.18"

# Async runtime (same as s3sync)
async-trait = "0.1.89"
async-channel = "2.5.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-util = "0.7.18"

# AWS SDK (same versions as s3sync)
# Disable default features on aws-config and aws-sdk-s3 to drop the legacy
# `rustls` alias that pulls rustls 0.21 (vulnerable rustls-webpki 0.101.x,
# RUSTSEC-2026-0098). The modern `default-https-client` feature, which uses
# rustls 0.23 via `aws-smithy-http-client`, is re-enabled explicitly.
aws-config = { version = "1.8.16", default-features = false, features = ["behavior-version-latest", "default-https-client", "rt-tokio", "credentials-process", "sso"] }
aws-runtime = "1.7.3"
aws-sdk-s3 = { version = "1.131.0", default-features = false, features = ["sigv4a", "http-1x", "default-https-client", "rt-tokio"] }
aws-smithy-runtime-api = "1.12.0"
aws-smithy-types = "1.4.7"
aws-smithy-types-convert = { version = "0.60.14", features = ["convert-chrono"] }
aws-types = "1.3.15"

# CLI (same as s3sync)
clap = { version = "4.6.1", features = ["derive", "env", "cargo", "string"] }
clap_complete = "4.6.2"
clap-verbosity-flag = "3.0.4"

# Date/time
chrono = "0.4.44"

# Utilities (same as s3sync)
dyn-clone = "1.0.20"
url = "2.5.8"
urlencoding = "2.1.3"

# Rate limiter (same as s3sync)
leaky-bucket = "1.1.2"

# Regex (same as s3sync)
fancy-regex = "0.17.0"

# Security (same as s3sync)
zeroize = "1.8.2"
zeroize_derive = "1.4.3"

# Logging (same as s3sync)
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json", "local-time"] }

# Progress bar (same as s3sync)
indicatif = "0.18.4"
simple_moving_average = "1.0.2"

# Lua support (same as s3sync, optional)
mlua = { version = "0.11.6", features = ["lua54", "async", "send", "vendored"], optional = true }

# Byte unit parsing (same as s3sync)
byte-unit = "5.2.0"

# Build info (same as s3sync)
shadow-rs = { version = "2.0.0", optional = true }

# Misc (same as s3sync)
cfg-if = "1.0.4"
bitflags = "2.11.1"
log = "0.4.29"

[build-dependencies]
shadow-rs = { version = "2.0.0", optional = true }

[dev-dependencies]
proptest = "1.11"
once_cell = "1.21.4"
uuid = { version = "1.23.1", features = ["v4"] }
nix = { version = "0.31.2", features = ["process", "signal"] }
tempfile = "3.27.0"
rusty-fork = "0.3.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)', 'cfg(e2e_test)'] }

[features]
default = ["version", "lua_support"]
version = ["dep:shadow-rs"]
lua_support = ["dep:mlua"]

[profile.release]
debug = 1
panic = "unwind"
opt-level = 3
strip = "symbols"
lto = "fat"
codegen-units = 1

[profile.release-min-size]
inherits = "release"
debug = 0
panic = "abort"
opt-level = "z"
